# lab-forge

./: .gitignore  README.md  pyproject.toml
labs/: active-directory.yml  ad-range.yml  attack.yml  detection-engineering.yml  malware-analysis.yml  network-forensics.yml  reverse-engineering.yml  siem-splunk.yml
scripts/windows/: setup-sysmon.ps1
src/labforge/: __main__.py  cli.py  compose.py  config.py  controller.py  docker_manager.py  lab_state.py  network.py
